Fixed small formatting error in main page title alignment

--- a/all.css
+++ b/all.css
@@ -16,6 +16,10 @@ td {
 	text-align: center;
 }
 
+.mainHeading {
+	padding: 0;
+}
+
 .backLink {
 	float: left;
 }
